plrustc/plrustc/uitests/tuple_struct_self_pat_local_priv.stderr
error[E0603]: tuple struct constructor `my::Foo` is private
  --> $DIR/tuple_struct_self_pat_local_priv.rs:8:13
   |
LL |         let Self(s) = self;
   |             ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
